# Prompt_Injection_Detection_Model

./: .gitignore  README.md  data_pipeline.py  demo.py  embed.py  embed_text.py  logistic_regression.py  logistic_regression_model.pkl  logistic_regression_model.py  lr_model.py  lr_tensorflow.py  lr_train.py  main.py  nn_demo.py  nn_model.py  nn_tensorflow.py  nn_train.py  normalize_text.py  pyproject.toml  requirements.txt  stratified_split_to_csv.py  train.py
data/embedded/: Y_test.npy  Y_train.npy
data/normalized_split/: test_split_normalized.csv
models/: lr_model.pkl  nn_model.keras
