[project]
name = "prompt-injection-detection-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "ollama>=0.5.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.19.0",
]
